@@ -1,9 +1,10 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.handler.intervener;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.hmcts.reform.finrem.caseorchestration.FinremCallbackRequestFactory;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.handler.FinremCallbackRequest;
@@ -12,17 +13,15 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicRadioList;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DynamicRadioListElement;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.IntervenerFour;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.IntervenerOne;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.IntervenerThree;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.IntervenerTwo;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertEquals;
-import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType.CONTESTED;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.CASE_ID;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.ADD_INTERVENER_FOUR_CODE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.ADD_INTERVENER_FOUR_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.ADD_INTERVENER_ONE_CODE;
@@ -48,50 +47,27 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerC
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.UPDATE_INTERVENER_ONE_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.UPDATE_INTERVENER_THREE_VALUE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.UPDATE_INTERVENER_TWO_VALUE;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.test.Assertions.assertCanHandle;
 
-@RunWith(MockitoJUnitRunner.class)
-public class IntervenersMidHandlerTest {
-
-    public static final String AUTH_TOKEN = "tokien:)";
+@ExtendWith(MockitoExtension.class)
+class IntervenersMidHandlerTest {
 
     @InjectMocks
-    private IntervenersAboutToStartHandler handler;
+    private IntervenersAboutToStartHandler aboutToStartHandler;
+
     @InjectMocks
     private IntervenersMidHandler midHandler;
 
     @Test
-    public void givenContestedCase_whenICallbackIsSubmitted_thenHandlerCanNotHandle() {
-        assertThat(midHandler
-                .canHandle(CallbackType.SUBMITTED, CaseType.CONTESTED, EventType.MANAGE_INTERVENERS),
-            is(false));
+    void testCanHandle() {
+        assertCanHandle(midHandler, CallbackType.MID_EVENT, CaseType.CONTESTED, EventType.MANAGE_INTERVENERS);
     }
 
     @Test
-    public void givenConsentedCase_whenEventIsClose_thenHandlerCanNotHandle() {
-        assertThat(midHandler
-                .canHandle(CallbackType.MID_EVENT, CaseType.CONTESTED, EventType.CLOSE),
-            is(false));
-    }
-
-    @Test
-    public void givenConsentedCase_whenCallTypeConsented_thenHandlerCanNotHandle() {
-        assertThat(midHandler
-                .canHandle(CallbackType.MID_EVENT, CaseType.CONSENTED, EventType.CLOSE),
-            is(false));
-    }
-
-    @Test
-    public void givenContestedCase_whenEventIsManageInteveners_thenHandlerCanHandleEvent() {
-        assertThat(midHandler
-                .canHandle(CallbackType.MID_EVENT, CaseType.CONTESTED, EventType.MANAGE_INTERVENERS),
-            is(true));
-    }
-
-    @Test
-    public void givenContestedCase_whenMidEventCalledAndInterv1SelectedToOperate_thenPrepareOptionListForIntvBasedOnIntervenersList() {
+    void givenContestedCase_whenMidEventCalledAndInterv1SelectedToOperate_thenPrepareOptionListForIntvBasedOnIntervenersList() {
         FinremCallbackRequest finremCallbackRequest = buildCallbackRequest();
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -105,15 +81,15 @@ public class IntervenersMidHandlerTest {
         assertEquals(1, intervenerOptionList.getListItems().size());
         assertEquals(ADD_INTERVENER_ONE_CODE, intervenerOptionList.getValue().getCode());
         assertEquals(ADD_INTERVENER_ONE_VALUE, intervenerOptionList.getValue().getLabel());
-        assertEquals(ADD_INTERVENER_ONE_CODE, intervenerOptionList.getListItems().get(0).getCode());
-        assertEquals(ADD_INTERVENER_ONE_VALUE, intervenerOptionList.getListItems().get(0).getLabel());
+        assertEquals(ADD_INTERVENER_ONE_CODE, intervenerOptionList.getListItems().getFirst().getCode());
+        assertEquals(ADD_INTERVENER_ONE_VALUE, intervenerOptionList.getListItems().getFirst().getLabel());
     }
 
     @Test
     public void givenContestedCase_whenMidEventCalledAndIntervSelectedToOperateNotValid_thenThrowException() {
         FinremCallbackRequest finremCallbackRequest = buildCallbackRequest();
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -123,7 +99,7 @@ public class IntervenersMidHandlerTest {
         assertThatThrownBy(() ->
             midHandler.handle(finremCallbackRequest, AUTH_TOKEN)
         ).isInstanceOf(IllegalArgumentException.class)
-            .hasMessage("Invalid intervener selected for caseId " + 123L);
+            .hasMessage("Invalid intervener selected for caseId 1234567890");
 
     }
 
@@ -131,7 +107,7 @@ public class IntervenersMidHandlerTest {
     public void givenContestedCase_whenMidEventCalledAndInterv2SelectedToOperate_thenPrepareOptionListForIntvBasedOnIntervenersList() {
         FinremCallbackRequest finremCallbackRequest = buildCallbackRequest();
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -144,15 +120,15 @@ public class IntervenersMidHandlerTest {
         assertEquals(1, intervenerOptionList.getListItems().size());
         assertEquals(ADD_INTERVENER_TWO_CODE, intervenerOptionList.getValue().getCode());
         assertEquals(ADD_INTERVENER_TWO_VALUE, intervenerOptionList.getValue().getLabel());
-        assertEquals(ADD_INTERVENER_TWO_CODE, intervenerOptionList.getListItems().get(0).getCode());
-        assertEquals(ADD_INTERVENER_TWO_VALUE, intervenerOptionList.getListItems().get(0).getLabel());
+        assertEquals(ADD_INTERVENER_TWO_CODE, intervenerOptionList.getListItems().getFirst().getCode());
+        assertEquals(ADD_INTERVENER_TWO_VALUE, intervenerOptionList.getListItems().getFirst().getLabel());
     }
 
     @Test
     public void givenContestedCase_whenMidEventCalledAndInterv3SelectedToOperate_thenPrepareOptionListForIntvBasedOnIntervenersList() {
         FinremCallbackRequest finremCallbackRequest = buildCallbackRequest();
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -166,15 +142,15 @@ public class IntervenersMidHandlerTest {
         assertEquals(1, intervenerOptionList.getListItems().size());
         assertEquals(ADD_INTERVENER_THREE_CODE, intervenerOptionList.getValue().getCode());
         assertEquals(ADD_INTERVENER_THREE_VALUE, intervenerOptionList.getValue().getLabel());
-        assertEquals(ADD_INTERVENER_THREE_CODE, intervenerOptionList.getListItems().get(0).getCode());
-        assertEquals(ADD_INTERVENER_THREE_VALUE, intervenerOptionList.getListItems().get(0).getLabel());
+        assertEquals(ADD_INTERVENER_THREE_CODE, intervenerOptionList.getListItems().getFirst().getCode());
+        assertEquals(ADD_INTERVENER_THREE_VALUE, intervenerOptionList.getListItems().getFirst().getLabel());
     }
 
     @Test
     public void givenContestedCase_whenMidEventCalledAndInterv4SelectedToOperate_thenPrepareOptionListForIntvBasedOnIntervenersList() {
         FinremCallbackRequest finremCallbackRequest = buildCallbackRequest();
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -187,8 +163,8 @@ public class IntervenersMidHandlerTest {
         assertEquals(1, intervenerOptionList.getListItems().size());
         assertEquals(ADD_INTERVENER_FOUR_CODE, intervenerOptionList.getValue().getCode());
         assertEquals(ADD_INTERVENER_FOUR_VALUE, intervenerOptionList.getValue().getLabel());
-        assertEquals(ADD_INTERVENER_FOUR_CODE, intervenerOptionList.getListItems().get(0).getCode());
-        assertEquals(ADD_INTERVENER_FOUR_VALUE, intervenerOptionList.getListItems().get(0).getLabel());
+        assertEquals(ADD_INTERVENER_FOUR_CODE, intervenerOptionList.getListItems().getFirst().getCode());
+        assertEquals(ADD_INTERVENER_FOUR_VALUE, intervenerOptionList.getListItems().getFirst().getLabel());
     }
 
     @Test
@@ -200,7 +176,7 @@ public class IntervenersMidHandlerTest {
         finremCallbackRequest.getCaseDetails().getData().setIntervenerOne(oneWrapper);
         finremCallbackRequest.getCaseDetailsBefore().getData().setIntervenerOne(oneWrapper);
 
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -227,7 +203,7 @@ public class IntervenersMidHandlerTest {
 
         finremCallbackRequest.getCaseDetails().getData().setIntervenerTwo(twoWrapper);
         finremCallbackRequest.getCaseDetailsBefore().getData().setIntervenerTwo(twoWrapper);
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -251,7 +227,7 @@ public class IntervenersMidHandlerTest {
 
         finremCallbackRequest.getCaseDetails().getData().setIntervenerThree(threeWrapper);
         finremCallbackRequest.getCaseDetailsBefore().getData().setIntervenerThree(threeWrapper);
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -275,7 +251,7 @@ public class IntervenersMidHandlerTest {
 
         finremCallbackRequest.getCaseDetails().getData().setIntervenerFour(fourWrapper);
         finremCallbackRequest.getCaseDetailsBefore().getData().setIntervenerFour(fourWrapper);
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -298,7 +274,7 @@ public class IntervenersMidHandlerTest {
             .builder().intervenerName("Four name").intervenerEmail("test@test.com").build();
 
         finremCallbackRequest.getCaseDetails().getData().setIntervenerFour(fourWrapper);
-        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = handler.handle(finremCallbackRequest, AUTH_TOKEN);
+        GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> handleResp = aboutToStartHandler.handle(finremCallbackRequest, AUTH_TOKEN);
 
         assertEquals(4, handleResp.getData().getIntervenersList().getListItems().size());
 
@@ -308,17 +284,10 @@ public class IntervenersMidHandlerTest {
         assertThatThrownBy(() ->
             midHandler.handle(finremCallbackRequest, AUTH_TOKEN)
         ).isInstanceOf(IllegalArgumentException.class)
-            .hasMessage("Invalid intervener selected for caseId " + 123L);
+            .hasMessage("Invalid intervener selected for caseId 1234567890");
     }
 
     private FinremCallbackRequest buildCallbackRequest() {
-        return FinremCallbackRequest
-            .builder()
-            .eventType(EventType.MANAGE_INTERVENERS)
-            .caseDetailsBefore(FinremCaseDetails.builder().id(123L).caseType(CONTESTED)
-                .data(new FinremCaseData()).build())
-            .caseDetails(FinremCaseDetails.builder().id(123L).caseType(CONTESTED)
-                .data(new FinremCaseData()).build())
-            .build();
+        return FinremCallbackRequestFactory.from(Long.valueOf(CASE_ID), FinremCaseData.builder().build());
     }
 }
